--- a/src/index.css
+++ b/src/index.css
@@ -18,26 +18,75 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+
+  --terna-arte-gradient: linear-gradient(to bottom right, #ffc3d8 0%, #bbf0ff 25%, #e7c3df 50%, #ffeea4 75%, #bbf0ff 100%);
 }
 
-.wallpaper {
+/* Gradient based on the brand color */
+.terna-arte-gradient{
+  border: 0.5rem solid transparent;
+  background-image: linear-gradient(#fff7fa, #fff7fa),
+                    var(--terna-arte-gradient);
+  background-origin: border-box;
+  background-clip: content-box, border-box;
+}
+
+/* * Wallpaper */
+.wallpaper{
+  position: fixed;
+  /* background-image: url('./images/wallpaper2.png'); */
+  background-image: url('./images/wallpaper.png');
+  background-repeat: no-repeat;
+  background-position: top right;
+  filter: blur(3.14px);
+}
+
+/* TODO: Delete this second wallpaper if the first was the best */
+.wallpaper2 {
+  position: fixed;
   height: 100%;
   min-height: 100vh;
   margin: 0;
   padding: 0;
-}
-
-.wallpaper {
   content: "";
-  position: fixed;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
   z-index: -1;
-  background-image: url('./images/wallpaper.jpg');
+  background-image: url('./images/wallpaper.png');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
-  filter: blur(3px);
+  filter: blur(3.14px);
+}
+
+
+/* Outlines */
+.black-lines {
+  position: flex;
+  background-color: #000;
+  mask-mode: alpha;
+  mask-repeat: no-repeat;
+  mask-position: 1px 1px 1px 1px;
+  mask-size: contain;
+  border: 1px solid #000;
+}
+
+.instagram {
+  mask-image: url('./images/instagram.png');
+}
+
+.facebook {
+  mask-image: url('./images/facebook.png');
+}
+
+.whatsapp {
+  mask-image: url('./images/whatsapp.png');
+}
+
+.logo {
+  mask-image: url('./assets/ternaarte.png');
+  border: 6px solid transparent !important;
+  background-image: linear-gradient(to right, #bbf0ff 0%, #e7c3df 25%, #ffeea4 75%, #bbf0ff 100%);
 }
